working on footer

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -290,7 +290,7 @@
             </div>
         </section>
         <section class="w-100 d-flex flex-center-center ">
-            <div class="col-6 m-t-7 m-b-6 d-flex flex-column gap-2rem">
+            <div class="col-6 m-t-5 d-flex flex-column gap-2rem">
                 <h1 class="h1_big py-b-1">Domande frequenti</h1>
                 <hr>
                 <span class="d-flex flex-row flex-align-center gap-2rem"><h1>Qual'è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</h1><i class="fa-solid fa-caret-down arrow_FAQ"></i></span>
@@ -298,71 +298,14 @@
                 <span class="d-flex flex-row flex-align-center gap-2rem"><h1>Qual'è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</h1><i class="fa-solid fa-caret-down arrow_FAQ"></i></span>
                 <hr>
                 <span class="d-flex flex-row flex-align-center gap-2rem"><h1>Qual'è la differenza tra Dropbox Business Standart e Dropbox Business Advanced?</h1><i class="fa-solid fa-caret-down arrow_FAQ"></i></span>
-                <hr>
             </div>
         </section>
     </main>
     <footer id="app_footer">
-        <div class="container w-100 bg-black c-white flex-column d-flex flex-center-center">
-            <div class="col-7 d-flex flex-row footer_list">
-                <div class="w-20 d-flex flex-column gap-1rem">
-                    <h1>Dropbox</h1>
-                    <ul class="unstyle-list d-flex flex-column gap-07">
-                        <li>Applicazione desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
-                    </ul>
+        <div class="container w-100 bg-black c-white d-flex flex-center-center">
+            <div class="col-7">
+                <div class="w-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero praesentium sint atque qui fugiat perferendis voluptatum eveniet, culpa, iste libero cupiditate debitis repellat! Iste maiores eligendi dolor optio aspernatur sint, reprehenderit numquam consequatur soluta blanditiis eaque ducimus illo eveniet quam at omnis esse cumque nihil, voluptates quis accusamus ipsa animi!
                 </div>
-                <div class="w-20 d-flex flex-column gap-1rem">
-                    <h1>Prodotti</h1>
-                    <ul class="unstyle-list d-flex flex-column gap-07">
-                        <li>Applicazione desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
-                    </ul>
-                </div>
-                <div class="w-20 d-flex flex-column gap-1rem">
-                    <h1>Azienda</h1>
-                    <ul class="unstyle-list d-flex flex-column gap-07">
-                        <li>Applicazione desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
-                    </ul>
-                </div>
-                <div class="w-20 d-flex flex-column gap-1rem">
-                    <h1>Supporto</h1>
-                    <ul class="unstyle-list d-flex flex-column gap-07">
-                        <li>Applicazione desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
-                    </ul>
-                </div>
-                <div class="w-20 d-flex flex-column gap-1rem">
-                    <h1>Community</h1>
-                    <ul class="unstyle-list d-flex flex-column gap-07">
-                        <li>Applicazione desktop</li>
-                        <li>Perchè Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
-                    </ul>
-                </div>
-            </div>
-            <div>
-                <hr class="hr_little">
-                <span class="d-flex flex-align-center">
-                    <i class="fa-solid fa-earth-americas"></i>
-                    <span>Italiano</span>
-                    <i class="fa-solid fa-caret-up"></i>
-                </span>
             </div>
         </div>
     </footer>
