--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
                     </ul>
                 </div>
             </div>
-            <div>
-                <hr class="hr_little">
+            <div class="col-7 py-b-3">
+                <hr class="hr_little_footer m-b-1_8">
                 <span class="d-flex flex-align-center">
                     <i class="fa-solid fa-earth-americas"></i>
                     <span>Italiano</span>
