--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             </div>
             <div class="col-7 py-b-3">
                 <hr class="hr_little_footer m-b-1_8">
-                <span class="d-flex flex-align-center">
+                <span class="d-flex flex-align-center d-flex flex-row gap-04rem">
                     <i class="fa-solid fa-earth-americas"></i>
                     <span>Italiano</span>
                     <i class="fa-solid fa-caret-up"></i>
