--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     </div>
                     <div class="col-12 m-t-5">
                         <h1 class="col-12 py-b-1 h1_big">Esegui piu operazioni con Dropbox Business</h1>
-                        <div class="row d-flex flex-row flex-wrap">
+                        <div class="row_operations d-flex flex-row flex-wrap">
                             <div class="card_operations col-4 d-flex flex-column gap-1rem">
                                 <img src="./assets/img/business-feature-switching-tools.png" alt="Business Tools">
                                 <h1>Passa di meno tra uno strumento all'altro</h1>
